# software-engineering-agh

./: .dockerignore  .gitignore  README.md  collect_source_code.sh  docker-compose.yml  main  openapi.json  package-lock.json  project_source_code.txt  roadmap.md  stories.md  vercel.json  wizja_produktu.md
api/: pyproject.toml  requirements.txt
backend/: Dockerfile  config.py  create_tables.py  database.py  dbinit.sh  example_data.py  main.py  model.py  populate.py  pyproject.toml
backend/routers/: auth.py  change_recommendation.py  change_request.py  courses.py  dashboard.py  equipment.py  group.py  proposal.py  room.py  room_unavailability.py  schemas.py  user.py
backend/scripts/: create_tables.py  populate_mock_data.py
backend/tests/: test_change_recommendation.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  project_essentials.txt  vite.config.js
frontend/api/: create_tables.py  example_data.py
frontend/api/routers/: change_recommendation.py  change_request.py  schemas.py
frontend/nginx/: default.conf
frontend/src/: App.css  App.js  App.jsx  AppRoutes.js  AppRoutes.jsx  index.css
frontend/src/api/: apiService.js  authService.js
frontend/src/components/: AvailabilitySchedule.js  LandingPage.js  LoginForm.js  MainPage.js  Navbar.js  PrivateRoute.js  ProposalDetailsDialog.js
frontend/src/components/dashboard/: PendingRequestsList.jsx  StatCard.jsx
frontend/src/components/layout/: Header.js  Header.jsx  Navbar.js  PrivateRoute.js  PrivateRoute.jsx  PublicRoute.js  PublicRoute.jsx  Sidebar.js  Sidebar.jsx
frontend/src/contexts/: AuthContext.jsx  NotificationContext.js
frontend/src/features/Admin/: AdminDataGrid.js  AdminDataGrid.jsx  CourseFormDialog.js  CourseFormDialog.jsx  DataGridToolbar.js  EquipmentFormDialog.js  EquipmentFormDialog.jsx  EventFormDialog.jsx  GroupFormDialog.js  GroupFormDialog.jsx  RoomFormDialog.js  RoomFormDialog.jsx  RoomUnavailabilityFormDialog.js  RoomUnavailabilityFormDialog.jsx  UserFormDialog.js  UserFormDialog.jsx
frontend/src/features/Calendar/: ChangeRequestDialog.js  ChangeRequestDialog.jsx  EventDialog.js  EventDialog.jsx
frontend/src/features/Dashboard/: AdminDashboard.jsx
frontend/src/features/Proposals/: AvailabilitySelector.js  AvailabilitySelector.jsx
frontend/src/hooks/: useAllEvents.js  useCrud.js
frontend/src/pages/: AvailabilityPage.js  ChangeRequestsManagementPage.jsx  ChangeRequestsOverviewPage.jsx  ChangeRequestsPage.js  ChangeRequestsPage.jsx  CoursesPage.js  CoursesPage.jsx  EquipmentPage.js  EquipmentPage.jsx  EventsPage.jsx  GroupsPage.js  GroupsPage.jsx  LoginPage.js  LoginPage.jsx  MainPage.js  MainPage.jsx  MyRecommendationsPage.js  MyRecommendationsPage.jsx  ProposalsPage.js  RedirectOnRoot.js  RequestStatusPage.js  RoomUnavailabilityPage.js  RoomUnavailabilityPage.jsx  RoomsPage.js  RoomsPage.jsx  SelectTermPage.js  UserPlanPage.js  UsersPage.js  UsersPage.jsx
frontend/src/services/: apiService.js  authService.js
frontend/src/theme/: theme.js
