[tool.poetry]
name = "booking-system-backend"
version = "0.1.0"
description = "Backend for AGH WZ Room Booking System"
authors = ["Apiotr16st <piotrandres@student.agh.edu.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
uvicorn = { extras = ["standard"], version = ">=0.29.0" }
fastapi = ">=0.115.0,<0.116.0"
sqlalchemy = ">=2.0.40,<3.0.0"
pydantic = { extras = ["email"], version = ">=2.11.3,<3.0.0" }
pydantic-settings = "^2.3.0"
python-jose = { extras = ["cryptography"], version = ">=3.3.0,<4.0.0" }
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-multipart = ">=0.0.6,<0.1.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "Q"]
ignore = [
    "D203",
    "D212",
"ANN101",
    "ANN102",
]
line-length = 88
src = ["."]

[tool.ruff.lint.pydocstyle]
convention = "google"