[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Apiotr16st",email = "piotrandres@student.agh.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
